# helios_verifier

./: DataRetriever.py  LICENSE  README.md  TODO.md  main.py  pyproject.toml  requirements.txt
Util/: HashUtil.py
data/: DataRetriever.py  DataUrls.py
docs/: .gitignore  Makefile  conf.py  index.rst  make.bat
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/data/: DataRetriever.doctree
docs/_build/doctrees/verifiers/: BallotVerifier.doctree  DecryptionFactorVerifier.doctree  ElectionVerifier.doctree  ProofVerifier.doctree  VoteVerifier.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/data/: DataRetriever.rst
docs/verifiers/: BallotVerifier.rst  ElectionVerifier.rst  ProofVerifier.rst  VoteVerifier.rst
domain/: CastVote.py  Commitment.py  ElGamalCiphertext.py  ElGamalPublicKey.py  Election.py  EncryptedAnswer.py  EncryptedAnswerWithPlaintext.py  Question.py  QuestionList.py  Trustee.py  Vote.py  VoteWithPlaintext.py  Voter.py  VoterList.py  ZkProof.py  ZkProofZeroMax.py
helios_verifier/: README.md  helios_verifier_app.py
helios_verifier/data/: DataRetriever.py
helios_verifier/domain/: CastVote.py  Election.py  EncryptedAnswer.py  Question.py  ZkProof.py
helios_verifier/util/: HashUtil.py
helios_verifier/verifiers/: BallotVerifier.py  DecryptionFactorVerifier.py  ElectionVerifier.py  ProofVerifier.py  VoteVerifier.py
util/: HashUtil.py
verifiers/: BallotVerifier.py  ElectionVerifier.py  ProofVerifier.py  VoteVerifier.py
(+9 files in other folders)
